Hoc5.2/src/y.output
   0  $accept : list $end

   1  list :
   2       | list '\n'
   3       | list asgn '\n'
   4       | list expr '\n'
   5       | list stmt '\n'

   6  asgn : VAR '=' expr

   7  stmt : expr ';'
   8       | PRINT expr ';'
   9       | while testexpr stmt end
  10       | if testexpr stmt end
  11       | if testexpr stmt end else stmt end
  12       | for '(' initstmt ':' testexpr ':' updatestmt ')' stmt end
  13       | '{' stmtlist '}'

  14  stmtlist :
  15           | stmtlist stmt

  16  initstmt : expr

  17  testexpr : '(' expr ')'

  18  updatestmt : expr

  19  while : WHILE

  20  if : IF

  21  else : ELSE

  22  for : FOR

  23  end :

  24  expr : poly
  25       | VAR
  26       | asgn
  27       | BLTIN '(' expr ',' expr ')'
  28       | BLTIN '(' expr ')'
  29       | expr '+' expr
  30       | expr '-' expr
  31       | expr '*' expr
  32       | expr '/' expr
  33       | expr '%' expr
  34       | expr '^' expr
  35       | expr EQ expr
  36       | expr NEQ expr
  37       | expr GT expr
  38       | expr LT expr
  39       | expr GE expr
  40       | expr LE expr
  41       | NUM
  42       | '(' expr ')'

  43  poly : '[' terms ']'
  44       | '[' ']'

  45  terms : term
  46        | term terms

  47  term : TERM

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . '\n'  (2)
	list : list . asgn '\n'  (3)
	list : list . expr '\n'  (4)
	list : list . stmt '\n'  (5)

	$end  accept
	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'\n'  shift 11
	'{'  shift 12
	.  error

	asgn  goto 13
	expr  goto 14
	stmt  goto 15
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 2
	expr : BLTIN . '(' expr ',' expr ')'  (27)
	expr : BLTIN . '(' expr ')'  (28)

	'('  shift 20
	.  error


state 3
	asgn : VAR . '=' expr  (6)
	expr : VAR .  (25)

	'='  shift 21
	EQ  reduce 25
	NEQ  reduce 25
	GT  reduce 25
	LT  reduce 25
	GE  reduce 25
	LE  reduce 25
	','  reduce 25
	'-'  reduce 25
	'+'  reduce 25
	'/'  reduce 25
	'%'  reduce 25
	'*'  reduce 25
	'^'  reduce 25
	')'  reduce 25
	'\n'  reduce 25
	';'  reduce 25
	':'  reduce 25


state 4
	expr : NUM .  (41)

	.  reduce 41


state 5
	if : IF .  (20)

	.  reduce 20


state 6
	while : WHILE .  (19)

	.  reduce 19


state 7
	for : FOR .  (22)

	.  reduce 22


state 8
	stmt : PRINT . expr ';'  (8)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 23
	poly  goto 19


state 9
	expr : '(' . expr ')'  (42)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 24
	poly  goto 19


state 10
	poly : '[' . terms ']'  (43)
	poly : '[' . ']'  (44)

	TERM  shift 25
	']'  shift 26
	.  error

	terms  goto 27
	term  goto 28


state 11
	list : list '\n' .  (2)

	.  reduce 2


state 12
	stmt : '{' . stmtlist '}'  (13)
	stmtlist : .  (14)

	.  reduce 14

	stmtlist  goto 29


13: shift/reduce conflict (shift 30, reduce 26) on '\n'
state 13
	list : list asgn . '\n'  (3)
	expr : asgn .  (26)

	'\n'  shift 30
	EQ  reduce 26
	NEQ  reduce 26
	GT  reduce 26
	LT  reduce 26
	GE  reduce 26
	LE  reduce 26
	'-'  reduce 26
	'+'  reduce 26
	'/'  reduce 26
	'%'  reduce 26
	'*'  reduce 26
	'^'  reduce 26
	';'  reduce 26


state 14
	list : list expr . '\n'  (4)
	stmt : expr . ';'  (7)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	'\n'  shift 43
	';'  shift 44
	.  error


state 15
	list : list stmt . '\n'  (5)

	'\n'  shift 45
	.  error


state 16
	stmt : while . testexpr stmt end  (9)

	'('  shift 46
	.  error

	testexpr  goto 47


state 17
	stmt : if . testexpr stmt end  (10)
	stmt : if . testexpr stmt end else stmt end  (11)

	'('  shift 46
	.  error

	testexpr  goto 48


state 18
	stmt : for . '(' initstmt ':' testexpr ':' updatestmt ')' stmt end  (12)

	'('  shift 49
	.  error


state 19
	expr : poly .  (24)

	.  reduce 24


state 20
	expr : BLTIN '(' . expr ',' expr ')'  (27)
	expr : BLTIN '(' . expr ')'  (28)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 50
	poly  goto 19


state 21
	asgn : VAR '=' . expr  (6)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 51
	poly  goto 19


state 22
	expr : asgn .  (26)

	.  reduce 26


state 23
	stmt : PRINT expr . ';'  (8)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	';'  shift 52
	.  error


state 24
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)
	expr : '(' expr . ')'  (42)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	')'  shift 53
	.  error


state 25
	term : TERM .  (47)

	.  reduce 47


state 26
	poly : '[' ']' .  (44)

	.  reduce 44


state 27
	poly : '[' terms . ']'  (43)

	']'  shift 54
	.  error


state 28
	terms : term .  (45)
	terms : term . terms  (46)

	TERM  shift 25
	']'  reduce 45

	terms  goto 55
	term  goto 28


state 29
	stmt : '{' stmtlist . '}'  (13)
	stmtlist : stmtlist . stmt  (15)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'{'  shift 12
	'}'  shift 56
	.  error

	asgn  goto 22
	expr  goto 57
	stmt  goto 58
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 30
	list : list asgn '\n' .  (3)

	.  reduce 3


state 31
	expr : expr EQ . expr  (35)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 59
	poly  goto 19


state 32
	expr : expr NEQ . expr  (36)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 60
	poly  goto 19


state 33
	expr : expr GT . expr  (37)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 61
	poly  goto 19


state 34
	expr : expr LT . expr  (38)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 62
	poly  goto 19


state 35
	expr : expr GE . expr  (39)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 63
	poly  goto 19


state 36
	expr : expr LE . expr  (40)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 64
	poly  goto 19


state 37
	expr : expr '-' . expr  (30)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 65
	poly  goto 19


state 38
	expr : expr '+' . expr  (29)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 66
	poly  goto 19


state 39
	expr : expr '/' . expr  (32)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 67
	poly  goto 19


state 40
	expr : expr '%' . expr  (33)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 68
	poly  goto 19


state 41
	expr : expr '*' . expr  (31)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 69
	poly  goto 19


state 42
	expr : expr '^' . expr  (34)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 70
	poly  goto 19


state 43
	list : list expr '\n' .  (4)

	.  reduce 4


state 44
	stmt : expr ';' .  (7)

	.  reduce 7


state 45
	list : list stmt '\n' .  (5)

	.  reduce 5


state 46
	testexpr : '(' . expr ')'  (17)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 71
	poly  goto 19


state 47
	stmt : while testexpr . stmt end  (9)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'{'  shift 12
	.  error

	asgn  goto 22
	expr  goto 57
	stmt  goto 72
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 48
	stmt : if testexpr . stmt end  (10)
	stmt : if testexpr . stmt end else stmt end  (11)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'{'  shift 12
	.  error

	asgn  goto 22
	expr  goto 57
	stmt  goto 73
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 49
	stmt : for '(' . initstmt ':' testexpr ':' updatestmt ')' stmt end  (12)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 74
	initstmt  goto 75
	poly  goto 19


state 50
	expr : BLTIN '(' expr . ',' expr ')'  (27)
	expr : BLTIN '(' expr . ')'  (28)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	','  shift 76
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	')'  shift 77
	.  error


state 51
	asgn : VAR '=' expr .  (6)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	','  reduce 6
	')'  reduce 6
	'\n'  reduce 6
	';'  reduce 6
	':'  reduce 6


state 52
	stmt : PRINT expr ';' .  (8)

	.  reduce 8


state 53
	expr : '(' expr ')' .  (42)

	.  reduce 42


state 54
	poly : '[' terms ']' .  (43)

	.  reduce 43


state 55
	terms : term terms .  (46)

	.  reduce 46


state 56
	stmt : '{' stmtlist '}' .  (13)

	.  reduce 13


state 57
	stmt : expr . ';'  (7)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	';'  shift 44
	.  error


state 58
	stmtlist : stmtlist stmt .  (15)

	.  reduce 15


state 59
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr EQ expr .  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 35
	NEQ  reduce 35
	GT  reduce 35
	LT  reduce 35
	GE  reduce 35
	LE  reduce 35
	','  reduce 35
	')'  reduce 35
	'\n'  reduce 35
	';'  reduce 35
	':'  reduce 35


state 60
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr NEQ expr .  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 36
	NEQ  reduce 36
	GT  reduce 36
	LT  reduce 36
	GE  reduce 36
	LE  reduce 36
	','  reduce 36
	')'  reduce 36
	'\n'  reduce 36
	';'  reduce 36
	':'  reduce 36


state 61
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr GT expr .  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 37
	NEQ  reduce 37
	GT  reduce 37
	LT  reduce 37
	GE  reduce 37
	LE  reduce 37
	','  reduce 37
	')'  reduce 37
	'\n'  reduce 37
	';'  reduce 37
	':'  reduce 37


state 62
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr LT expr .  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 38
	NEQ  reduce 38
	GT  reduce 38
	LT  reduce 38
	GE  reduce 38
	LE  reduce 38
	','  reduce 38
	')'  reduce 38
	'\n'  reduce 38
	';'  reduce 38
	':'  reduce 38


state 63
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr GE expr .  (39)
	expr : expr . LE expr  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 39
	NEQ  reduce 39
	GT  reduce 39
	LT  reduce 39
	GE  reduce 39
	LE  reduce 39
	','  reduce 39
	')'  reduce 39
	'\n'  reduce 39
	';'  reduce 39
	':'  reduce 39


state 64
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)
	expr : expr LE expr .  (40)

	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 40
	NEQ  reduce 40
	GT  reduce 40
	LT  reduce 40
	GE  reduce 40
	LE  reduce 40
	','  reduce 40
	')'  reduce 40
	'\n'  reduce 40
	';'  reduce 40
	':'  reduce 40


state 65
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr '-' expr .  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 30
	NEQ  reduce 30
	GT  reduce 30
	LT  reduce 30
	GE  reduce 30
	LE  reduce 30
	','  reduce 30
	'-'  reduce 30
	'+'  reduce 30
	')'  reduce 30
	'\n'  reduce 30
	';'  reduce 30
	':'  reduce 30


state 66
	expr : expr . '+' expr  (29)
	expr : expr '+' expr .  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	EQ  reduce 29
	NEQ  reduce 29
	GT  reduce 29
	LT  reduce 29
	GE  reduce 29
	LE  reduce 29
	','  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	')'  reduce 29
	'\n'  reduce 29
	';'  reduce 29
	':'  reduce 29


state 67
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr '/' expr .  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'^'  shift 42
	EQ  reduce 32
	NEQ  reduce 32
	GT  reduce 32
	LT  reduce 32
	GE  reduce 32
	LE  reduce 32
	','  reduce 32
	'-'  reduce 32
	'+'  reduce 32
	'/'  reduce 32
	'%'  reduce 32
	'*'  reduce 32
	')'  reduce 32
	'\n'  reduce 32
	';'  reduce 32
	':'  reduce 32


state 68
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr '%' expr .  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'^'  shift 42
	EQ  reduce 33
	NEQ  reduce 33
	GT  reduce 33
	LT  reduce 33
	GE  reduce 33
	LE  reduce 33
	','  reduce 33
	'-'  reduce 33
	'+'  reduce 33
	'/'  reduce 33
	'%'  reduce 33
	'*'  reduce 33
	')'  reduce 33
	'\n'  reduce 33
	';'  reduce 33
	':'  reduce 33


state 69
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr '*' expr .  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	'^'  shift 42
	EQ  reduce 31
	NEQ  reduce 31
	GT  reduce 31
	LT  reduce 31
	GE  reduce 31
	LE  reduce 31
	','  reduce 31
	'-'  reduce 31
	'+'  reduce 31
	'/'  reduce 31
	'%'  reduce 31
	'*'  reduce 31
	')'  reduce 31
	'\n'  reduce 31
	';'  reduce 31
	':'  reduce 31


state 70
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr '^' expr .  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	.  reduce 34


state 71
	testexpr : '(' expr . ')'  (17)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	')'  shift 78
	.  error


state 72
	stmt : while testexpr stmt . end  (9)
	end : .  (23)

	.  reduce 23

	end  goto 79


state 73
	stmt : if testexpr stmt . end  (10)
	stmt : if testexpr stmt . end else stmt end  (11)
	end : .  (23)

	.  reduce 23

	end  goto 80


state 74
	initstmt : expr .  (16)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	':'  reduce 16


state 75
	stmt : for '(' initstmt . ':' testexpr ':' updatestmt ')' stmt end  (12)

	':'  shift 81
	.  error


state 76
	expr : BLTIN '(' expr ',' . expr ')'  (27)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 82
	poly  goto 19


state 77
	expr : BLTIN '(' expr ')' .  (28)

	.  reduce 28


state 78
	testexpr : '(' expr ')' .  (17)

	.  reduce 17


state 79
	stmt : while testexpr stmt end .  (9)

	.  reduce 9


80: shift/reduce conflict (shift 83, reduce 10) on ELSE
state 80
	stmt : if testexpr stmt end .  (10)
	stmt : if testexpr stmt end . else stmt end  (11)

	ELSE  shift 83
	BLTIN  reduce 10
	VAR  reduce 10
	NUM  reduce 10
	IF  reduce 10
	WHILE  reduce 10
	FOR  reduce 10
	PRINT  reduce 10
	'('  reduce 10
	'['  reduce 10
	'\n'  reduce 10
	'{'  reduce 10
	'}'  reduce 10

	else  goto 84


state 81
	stmt : for '(' initstmt ':' . testexpr ':' updatestmt ')' stmt end  (12)

	'('  shift 46
	.  error

	testexpr  goto 85


state 82
	expr : BLTIN '(' expr ',' expr . ')'  (27)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	')'  shift 86
	.  error


state 83
	else : ELSE .  (21)

	.  reduce 21


state 84
	stmt : if testexpr stmt end else . stmt end  (11)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'{'  shift 12
	.  error

	asgn  goto 22
	expr  goto 57
	stmt  goto 87
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 85
	stmt : for '(' initstmt ':' testexpr . ':' updatestmt ')' stmt end  (12)

	':'  shift 88
	.  error


state 86
	expr : BLTIN '(' expr ',' expr ')' .  (27)

	.  reduce 27


state 87
	stmt : if testexpr stmt end else stmt . end  (11)
	end : .  (23)

	.  reduce 23

	end  goto 89


state 88
	stmt : for '(' initstmt ':' testexpr ':' . updatestmt ')' stmt end  (12)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 9
	'['  shift 10
	.  error

	asgn  goto 22
	expr  goto 90
	updatestmt  goto 91
	poly  goto 19


state 89
	stmt : if testexpr stmt end else stmt end .  (11)

	.  reduce 11


state 90
	updatestmt : expr .  (18)
	expr : expr . '+' expr  (29)
	expr : expr . '-' expr  (30)
	expr : expr . '*' expr  (31)
	expr : expr . '/' expr  (32)
	expr : expr . '%' expr  (33)
	expr : expr . '^' expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . GT expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GE expr  (39)
	expr : expr . LE expr  (40)

	EQ  shift 31
	NEQ  shift 32
	GT  shift 33
	LT  shift 34
	GE  shift 35
	LE  shift 36
	'-'  shift 37
	'+'  shift 38
	'/'  shift 39
	'%'  shift 40
	'*'  shift 41
	'^'  shift 42
	')'  reduce 18


state 91
	stmt : for '(' initstmt ':' testexpr ':' updatestmt . ')' stmt end  (12)

	')'  shift 92
	.  error


state 92
	stmt : for '(' initstmt ':' testexpr ':' updatestmt ')' . stmt end  (12)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	PRINT  shift 8
	'('  shift 9
	'['  shift 10
	'{'  shift 12
	.  error

	asgn  goto 22
	expr  goto 57
	stmt  goto 93
	while  goto 16
	if  goto 17
	for  goto 18
	poly  goto 19


state 93
	stmt : for '(' initstmt ':' testexpr ':' updatestmt ')' stmt . end  (12)
	end : .  (23)

	.  reduce 23

	end  goto 94


state 94
	stmt : for '(' initstmt ':' testexpr ':' updatestmt ')' stmt end .  (12)

	.  reduce 12


State 13 contains 1 shift/reduce conflict.
State 80 contains 1 shift/reduce conflict.


35 terminals, 17 nonterminals
48 grammar rules, 95 states
